Fix double scrolling in weekly view

--- a/next/src/app/dashboard/dashboard.module.scss
+++ b/next/src/app/dashboard/dashboard.module.scss
@@ -172,6 +172,8 @@ p.alt {
   border: 1px solid var(--dividers);
   border-right: none;
 
+  overflow: hidden;
+
   &:last-child {
     border-right: 1px solid var(--dividers);
   }
